fixing spacing in responsive on work page

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ p {
   }
 
   .nav-buttons {
-    margin: 20px 0 0 0;
+    margin: 15px 0 0 0 !important;
   }
   .about-section-header {
     font-size: 34px;
